# am-i-blocked

./: .gitignore  AGENTS.md  IMPLEMENTATION_TRACKER.md  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt
.github/prompts/: CODEX_TRACKER_UPDATE_PROMPT.md
docs/: api.md  architecture.md  developer-setup.md  operators-runbook.md  roadmap.md  threat-model.md
docs/ai/: AI_AGENT_VENDOR_KNOWLEDGE_BASE.md  REPO_MAP.md  SOURCE_REFRESH.md
docs/review/: UNKNOWN_EXPLAINABILITY_FEEDBACK.json  UNKNOWN_EXPLAINABILITY_FEEDBACK.md  UNKNOWN_EXPLAINABILITY_REVIEW.md  UNKNOWN_EXPLAINABILITY_SAMPLES.json
infra/: .env.example  docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: build_unknown_explainability_review.py  gather_panos_fixtures.sh  panos_observe_and_validate.py  panos_readonly_guard.sh  prepare_panos_observability_input.py  record_unknown_explainability_feedback.py  select_next_panos_candidate.py  summarize_panos_observability.py
services/api/: Dockerfile  pyproject.toml
services/api/am_i_blocked_api/: __init__.py
services/api/am_i_blocked_api/routes/: __init__.py  api.py  ui.py
services/api/am_i_blocked_api/templates/: index.html  result.html
services/worker/: Dockerfile  pyproject.toml
services/worker/am_i_blocked_worker/: __init__.py  main.py  pipeline.py
services/worker/am_i_blocked_worker/steps/: __init__.py  authoritative_correlation.py  bounded_probes.py  classify.py  context_resolver.py  persist_and_report.py  source_readiness_check.py  validate_request.py
tests/: __init__.py  conftest.py
tests/adapters/: test_adapter_contracts.py  test_logscale_adapter.py  test_panos_adapter.py  test_scm_adapter.py  test_sdwan_adapter.py  test_torq_adapter.py
tests/fixtures/: panos_fixture_selector.py  test_lifecycle_integration.py  test_panos_collection_harness.py  test_panos_fixture_selector.py  test_panos_observe_and_validate.py  test_panos_verification_fixture_pack.py  test_pipeline_fixtures.py  (+2 more)
(+164 files in other folders)
