[project]
name = "am-i-blocked"
version = "0.1.0"
description = "Network self-diagnosis and routing assistant"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",   # line too long – handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI uses this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["packages", "services"]
omit = ["*/tests/*", "*/__pycache__/*"]
