[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "am-i-blocked-api"
version = "0.1.0"
description = "FastAPI web service for am-i-blocked"
requires-python = ">=3.12"
dependencies = [
    "am-i-blocked-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["am_i_blocked_api"]
