[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "am-i-blocked-worker"
version = "0.1.0"
description = "Async diagnostic worker for am-i-blocked"
requires-python = ">=3.12"
dependencies = [
    "am-i-blocked-core",
    "am-i-blocked-adapters",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "anyio>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["am_i_blocked_worker"]
